--- a/style3.css
+++ b/style3.css
@@ -19,7 +19,7 @@ body {
 /* Nagłówek */
 
 header {
-  background-color: #333333;
+  background-color: #93DB70;
   color: #ffffff;
   padding: 20px;
   text-align: center;
